# animeAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  _auth.py  _cronjobs.py  _db.py  _memory_kv.py  _redis.py  _search.py  _trend.py  _user.py  _utils.py  app.py  pre-commit-uv-env-sync.sh  pyproject.toml  requirements.txt  test_upstream_relay.py
.github/workflows/: autoci.yml  test.yml
