[project]
name = "oleapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "asgi-correlation-id==4.3.3",
    "async-timeout==4.0.3",
    "beautifulsoup4==4.12.3",
    "bs4==0.0.2",
    "cachetools==5.4.0",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cryptography==44.0.1",
    "deprecated==1.2.14",
    "dnspython==2.7.0",
    "ecdsa==0.19.0",
    "email-validator==2.2.0",
    "fake-useragent==1.5.1",
    "fastapi-cli==0.0.5",
    "fastapi==0.115.4",
    "fastapi-limiter==0.1.6",
    "fastapi-utils==0.7.0",
    "greenlet==3.1.1",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httptools==0.6.4",
    "httpx==0.27.0",
    "idna==3.7",
    "importlib-resources==6.4.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "limits==3.13.0",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mypy-extensions==1.0.0",
    "mysqlclient==2.2.4",
    "orjson==3.10.11",
    "packaging==24.1",
    "pip==24.1.1",
    "poetry-core==1.9.0",
    "psutil==5.9.8",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pydantic-extra-types==2.9.0",
    "pydantic-settings==2.6.1",
    "pygments==2.18.0",
    "pyjwt>=2.9",
    "python-dotenv==1.0.1",
    "python-jose==3.4.0",
    "python-multipart==0.0.18",
    "pyyaml==6.0.2",
    "redis==5.0.8",
    "rich==13.9.4",
    "rsa==4.9",
    "shellingham==1.5.4",
    "six==1.16.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.32",
    "starlette==0.41.2",
    "typer==0.12.5",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "ujson==5.10.0",
    "urllib3==2.2.2",
    "uvicorn==0.30.6",
    "uvloop==0.21.0",
    "watchfiles==0.24.0",
    "websockets==13.1",
    "wrapt==1.16.0",
    "pre-commit==4.0.1",
    "cfgv==3.4.0",
    "distlib==0.3.9",
    "filelock==3.16.1",
    "identify==2.6.3",
    "nodeenv==1.9.1",
    "platformdirs==4.3.6",
    "virtualenv==20.28.0",
]
