[project]
name = "oleapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "cachetools==5.4.0",
    "certifi==2024.7.4",
    "cffi==1.17.0",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "cryptography==43.0.0",
    "deprecated==1.2.14",
    "ecdsa==0.19.0",
    "fake-useragent==1.5.1",
    "fastapi-limiter==0.1.6",
    "fastapi==0.112.1",
    "httpx==0.27.0",
    "pre-commit==4.2.0",
    "redis==5.0.8",
    "typing-inspect==0.9.0",
    "uvicorn==0.30.6",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "idna==3.7",
    "importlib-resources==6.4.3",
    "itsdangerous==2.2.0",
    "limits==3.13.0",
    "mysqlclient==2.2.4",
    "packaging==24.1",
    "pyasn1==0.6.0",
    "pycparser==2.22",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "python-dotenv==1.0.1",
    "python-jose==3.3.0",
    "rsa==4.9",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.32",
    "starlette==0.38.2",
    "typing-extensions==4.12.2",
    "urllib3==2.2.2",
    "wrapt==1.16.0",
    "asgi-correlation-id==4.3.4",
    "fastapi-utils==0.8.0",
    "pyjwt==2.10.1",
    "watchfiles==1.0.5",
    "cfgv==3.4.0",
    "distlib==0.3.9",
    "filelock==3.18.0",
    "identify==2.6.10",
    "mypy-extensions==1.1.0",
    "nodeenv==1.9.1",
    "platformdirs==4.3.7",
    "psutil==5.9.8",
    "pyyaml==6.0.2",
    "virtualenv==20.31.1",
]
