[project]
name = "oleapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fake-useragent>=2.2.0",
    "fastapi-limiter>=0.1.6",
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.115.12",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pre-commit>=4.2.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "redis>=6.0.0",
    "typing-inspect>=0.9.0",
    "useragent>=0.1.1",
]
